Update index.html with district calendar

--- a/index.html
+++ b/index.html
@@ -341,7 +341,9 @@
 
     <!-- Calendar Tab -->
     <section id="calendar" class="tab-content">
-      <iframe src="https://www.ahisd.net/cms/lib/TX50000578/Centricity/Domain/4/2024-25%20Instructional%20Calendar%20.pdf"></iframe>
+      <iframe src="https://www.ahisd.net/students___parents/calendars" 
+        title="AHISD Calendar"</iframe>
+"></iframe>
     </section>
   </main>
 
